[package]
name = "tensor-trade-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
async-trait = "0.1.75"
dotenv = "0.15.0"
graphql_client = "0.13.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
solana-client = "1.17.14"
solana-sdk = "1.17.14"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "sync"] }
