[package]
name = "tensor-trade"
version = "0.6.0"
edition = "2021"
authors = ["mektigboy <mektigboy@protonmail.com>"]
description = "A client for Tensor NFT marketplace and its aggregated marketplaces."
repository = "https://github.com/protecc-labs/tensor-trade-rs.git"
license = "MIT"
categories = ["api-bindings"]
keywords = ["crypto", "api"]
readme = "README.md"

[dependencies]
anyhow = "1.0.77"
async-trait = "0.1.75"
bincode = "1.3.3"
bytes = { version = "1.5.0", features = ["serde"] }
dotenv = "0.15.0"
graphql_client = "0.13.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.108"
solana-client = "1.17.16"
solana-sdk = "1.17.16"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "sync"] }
